--- a/config/assets.yml
+++ b/config/assets.yml
@@ -7,6 +7,7 @@ javascripts:
     - public/javascripts/libs/json2.js
     - public/javascripts/libs/underscore.js
     - public/javascripts/libs/backbone.js
+    - public/javascripts/libs/fancybox/*.js
   app:
     - public/javascripts/application.js
     - public/javascripts/controllers.js
