Ancho fijo para los contenidos

--- a/config/assets.yml
+++ b/config/assets.yml
@@ -9,6 +9,7 @@ javascripts:
     - public/javascripts/libs/backbone.js
     - public/javascripts/libs/fancybox/*.js
     - public/javascripts/libs/jquery.masonry.min.js
+    - public/javascripts/libs/jquery.waitforimages.js
   app:
     - public/javascripts/application.js
     - public/javascripts/controllers.js
